Implementando sistema de autenticação com cadastro, login e logout

--- a/cursos/templates/cursos/detalhe_curso.html
+++ b/cursos/templates/cursos/detalhe_curso.html
@@ -5,6 +5,13 @@
     <title>{{ curso.titulo }}</title>
 </head>
 <body>
+    {% if user.is_authenticated %}
+        <p>Bem-vindo, {{ user.username }} | <a href="{% url 'logout' %}">Sair</a></p>
+    {% else %}
+        <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'cadastro' %}">Cadastrar</a></p>
+    {% endif %}
+    <hr>
+    
     <h1>{{ curso.titulo }}</h1>
     <p>{{ curso.descricao }}</p>
 
