--- a/cursos/templates/cursos/lista_cursos.html
+++ b/cursos/templates/cursos/lista_cursos.html
@@ -5,6 +5,13 @@
     <title>Plataforma de Cursos</title>
 </head>
 <body>
+    {% if user.is_authenticated %}
+        <p>Bem-vindo, {{ user.username }} | <a href="{% url 'logout' %}">Sair</a></p>
+    {% else %}
+        <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'cadastro' %}">Cadastrar</a></p>
+    {% endif %}
+    <hr>
+
     <h1>Cursos Disponíveis</h1>
     <ul>
         {% for curso in cursos %}
