--- a/cursos/templates/cursos/lista_cursos.html
+++ b/cursos/templates/cursos/lista_cursos.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     {% if user.is_authenticated %}
-        <p>Bem-vindo, {{ user.username }} | <a href="{% url 'logout' %}">Sair</a></p>
+        <p>
+            Bem-vindo, {{ user.username }} |
+            <a href="{% url 'meus_cursos' %}">Meus Cursos</a> |
+            <a href="{% url 'logout' %}">Sair</a>
+        </p>
     {% else %}
         <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'cadastro' %}">Cadastrar</a></p>
     {% endif %}
