Criando layout base.html e aplicando a todos os templates

--- a/cursos/templates/cursos/detalhe_curso.html
+++ b/cursos/templates/cursos/detalhe_curso.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}Detalhe - Plataforma de Cursos{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -53,3 +58,4 @@
     <a href="/">← Voltar para os cursos</a>
 </body>
 </html>
+{% endblock %}
