--- a/cursos/templates/cursos/lista_cursos.html
+++ b/cursos/templates/cursos/lista_cursos.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}Lista - Plataforma de Cursos{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -30,3 +35,4 @@
     </ul>
 </body>
 </html>
+{% endblock %}
