--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}Login - Plataforma de Cursos{% endblock %}
+
+{% block content %}
 <h1>Login</h1>
 <form method="post">
     {% csrf_token %}
@@ -5,3 +10,4 @@
     <button type="submit">Entrar</button>
 </form>
 <a href="{% url 'cadastro' %}">Criar conta</a>
+{% endblock %}
