--- a/usuarios/templates/usuarios/meus_cursos.html
+++ b/usuarios/templates/usuarios/meus_cursos.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block title %}Meus Cursos - Plataforma de Cursos{% endblock %}
+
+{% block content %}
 <h1>Meus Cursos</h1>
 <ul>
     {% for m in matriculas %}
@@ -7,3 +12,4 @@
     {% endfor %}
 </ul>
 <a href="/">← Ver todos os cursos</a>
+{% endblock %}
