--- a/usuarios/templates/usuarios/cadastro.html
+++ b/usuarios/templates/usuarios/cadastro.html
@@ -1,43 +1,43 @@
 {% extends 'base.html' %}
+{% load form_filters %}
 
-{% block title %}Cadastro - Plataforma de Cursos{% endblock %}
+{% block title %}Cadastro{% endblock %}
 
 {% block content %}
-<h1>Cadastro</h1>
-
-<form method="post">
+<h2>Cadastro</h2>
+<form method="post" class="card p-4 shadow-sm">
     {% csrf_token %}
 
     {% if form.errors %}
-        <ul style="color: red;">
-            {% for field in form %}
-                {% for error in field.errors %}
+        <div class="alert alert-danger">
+            <ul class="mb-0">
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
                     <li>{{ error }}</li>
                 {% endfor %}
-            {% endfor %}
-            {% for error in form.non_field_errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
+            </ul>
+        </div>
     {% endif %}
 
-    <p>
-        <label for="id_username">Usuário:</label><br>
-        {{ form.username }}
-    </p>
+    <div class="mb-3">
+        <label for="id_username" class="form-label">Usuário:</label>
+        {{ form.username|add_class:"form-control" }}
+    </div>
 
-    <p>
-        <label for="id_password1">Senha:</label><br>
-        {{ form.password1 }}
-    </p>
+    <div class="mb-3">
+        <label for="id_password1" class="form-label">Senha:</label>
+        {{ form.password1|add_class:"form-control" }}
+    </div>
 
-    <p>
-        <label for="id_password2">Confirme a senha:</label><br>
-        {{ form.password2 }}
-    </p>
+    <div class="mb-3">
+        <label for="id_password2" class="form-label">Confirmar senha:</label>
+        {{ form.password2|add_class:"form-control" }}
+    </div>
 
-    <button type="submit">Cadastrar</button>
+    <button type="submit" class="btn btn-success">Cadastrar</button>
 </form>
-
-<a href="{% url 'login' %}">Já tem conta? Fazer login</a>
 {% endblock %}
