--- a/usuarios/templates/usuarios/meus_cursos.html
+++ b/usuarios/templates/usuarios/meus_cursos.html
@@ -26,8 +26,9 @@
     </div>
   {% endfor %}
 {% else %}
-  <p>Você ainda não está matriculado em nenhum curso.</p>
+  <div class="alert alert-warning">
+    Você ainda não está matriculado em nenhum curso.
+  </div>
 {% endif %}
-
 <a href="{% url 'lista_cursos' %}" class="btn btn-link mt-3">← Ver todos os cursos</a>
 {% endblock %}
