--- a/cursos/templates/cursos/lista_cursos.html
+++ b/cursos/templates/cursos/lista_cursos.html
@@ -8,7 +8,7 @@
         <div class="col-md-4 mb-4">
             <div class="card h-100">
                 {% if curso.imagem %}
-                    <img src="{{ curso.imagem.url }}" class="card-img-top" alt="{{ curso.titulo }}">
+                    <img src="{{ curso.imagem.url }}" class="card-img-top" alt="{{ curso.titulo }}" style="aspect-ratio: 16/9; object-fit: cover;">
                 {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">{{ curso.titulo }}</h5>
