--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
                 {% if user.is_authenticated %}
                     Olá, <strong>{{ user.username }}</strong> |
                     <a href="{% url 'meus_cursos' %}" class="btn btn-sm btn-outline-primary">Meus Cursos</a>
+                    <a href="{% url 'perfil' %}" class="btn btn-secondary btn-sm">Meu Perfil</a>
                     <a href="{% url 'logout' %}" class="btn btn-sm btn-outline-danger">Sair</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="btn btn-sm btn-outline-primary">Login</a>
